--- a/config/crd/multicluster.x-k8s.io_works.yaml
+++ b/config/crd/multicluster.x-k8s.io_works.yaml
@@ -50,7 +50,7 @@ spec:
                   type: object
                   properties:
                     manifests:
-                      description: Manifests represents a list of kuberenetes resources to be deployed on the spoke cluster.
+                      description: Manifests represents a list of kuberenetes resources to be deployed on the spoke cluster. The resources must be  namespace scoped resource in the same namespace, and cannot be secret.
                       type: array
                       items:
                         description: Manifest represents a resource to be deployed on spoke cluster
