--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   # Run workflow on fork repository will help contributors find and resolve issues before sending a PR.
   push:
   pull_request:
+defaults:
+  run:
+    working-directory: go/src/sigs.k8s.io/work-api
+
 jobs:
   golangci:
     name: lint
@@ -18,18 +22,24 @@ jobs:
 
           # show only new issues if it's a pull request.
           only-new-issues: false
+          args: --timeout 3m0s
   verify:
     name: verify
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          path: go/src/sigs.k8s.io/work-api
       - name: install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14.x
+          go-version: 1.16.x
       - name: verify
         run: hack/verify-all.sh -v
+        env:
+          GOPATH: '/home/runner/work/work-api/work-api/go'
   test:
     name: unit test
     needs: verify
@@ -37,9 +47,43 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          path: go/src/sigs.k8s.io/work-api
       - name: install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14.x
+          go-version: 1.16.x
       - name: make test
         run: make test
+        env:
+          GOPATH: '/home/runner/work/work-api/work-api/go'
+  e2e:
+    name: e2e
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          path: go/src/sigs.k8s.io/work-api
+      - name: install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - name: images
+        run: make docker-build
+        env:
+          GOPATH: '/home/runner/work/work-api/work-api/go'
+      - name: setup kind
+        uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: v0.11.1
+      - name: Load image on the nodes of the cluster
+        run: |
+          kind load docker-image --name=kind work-api-controller:latest
+      - name: Run e2e test
+        run: |
+          make test-e2e
+        env:
+          KUBECONFIG: /home/runner/.kube/config
