--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,54 @@
 name: CI Workflow
 on:
-  # Run this workflow every time a new commit pushed to upstream/fork repository.
-  # Run workflow on fork repository will help contributors find and resolve issues before sending a PR.
   push:
+    branches:
+      - master
+      - release-*
+  workflow_dispatch: {}
   pull_request:
+    branches:
+      - master
+      - release-*
+
+env:
+  # Common versions
+  GO_VERSION: '1.17'
+  GOLANGCI_VERSION: 'v1.38'
+  KIND_VERSION: 'v0.11.1'
+  GO_PATH: '/home/runner/work/work-api/work-api/go'
+
 defaults:
   run:
     working-directory: go/src/sigs.k8s.io/work-api
 
 jobs:
+
+  detect-noop:
+    runs-on: ubuntu-latest
+    outputs:
+      noop: ${{ steps.noop.outputs.should_skip }}
+    steps:
+      - name: Detect No-op Changes
+        id: noop
+        uses: fkirc/skip-duplicate-actions@v3.3.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          paths_ignore: '["**.md", "**.mdx", "**.png", "**.jpg"]'
+          do_not_skip: '["workflow_dispatch", "schedule", "push"]'
+          concurrent_skipping: false
+
   golangci:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v2
-      - uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -33,32 +67,50 @@ jobs:
         with:
           fetch-depth: 1
           path: go/src/sigs.k8s.io/work-api
+
       - name: install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: ${{ env.GO_VERSION }}
+
       - name: verify
         run: hack/verify-all.sh -v
         env:
-          GOPATH: '/home/runner/work/work-api/work-api/go'
+          GOPATH: ${{ env.GO_PATH }}
   test:
     name: unit test
     needs: verify
     runs-on: ubuntu-latest
+    if: needs.detect-noop.outputs.noop != 'true'
     steps:
-      - name: checkout code
+      - name: Checkout source
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
           path: go/src/sigs.k8s.io/work-api
-      - name: install Go
+
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+
       - name: make test
         run: make test
         env:
-          GOPATH: '/home/runner/work/work-api/work-api/go'
+          GOPATH: ${{ env.GO_PATH }}
+
+      - name: Upload report
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          ## Repository upload token - get it from codecov.io. Required only for private repositories
+          token: ${{ secrets.CODECOV_TOKEN }}
+          ## Comma-separated list of files to upload
+          files: ./cover.out
+          flags: ci-tests
+          name: codecov-umbrella
   e2e:
     name: e2e
     runs-on: ubuntu-latest
