applied work poc

--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 
 images:
 - name: work-api-controller:latest
-  newName: work-api-controller
+  newName: nerdyyatrice/work-api-controller
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
