--- a/examples/example-work-modify.yaml
+++ b/examples/example-work-modify.yaml
@@ -12,34 +12,31 @@ spec:
         name: test-nginx
         namespace: default
       spec:
-        replicas: 2
+        replicas: 1
         selector:
           matchLabels:
             app: test-nginx
-        strategy: {}
         template:
           metadata:
-            creationTimestamp: null
             labels:
               app: test-nginx
           spec:
             containers:
-            - image: nginx:1.14.2
+            - image: nginx:1.22.0
               name: nginx
               ports:
               - containerPort: 80
-              resources: {}
     - apiVersion: v1
       kind: Service
       metadata:
         labels:
-          run: test-nginx
-        name: test-nginx
+          run: test-nginx-2
+        name: test-nginx-2
         namespace: default
       spec:
         ports:
-        - port: 80
+        - port: 8080
           protocol: TCP
-          targetPort: 0
+          targetPort: 80
         selector:
           run: test-nginx
