--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,35 @@
 name: CI Workflow
 on:
-  # Run this workflow every time a new commit pushed to upstream/fork repository.
-  # Run workflow on fork repository will help contributors find and resolve issues before sending a PR.
-  push:
   pull_request:
+    branches:
+      - master
+      - release-*
+  workflow_dispatch: {}
+
 defaults:
   run:
     working-directory: go/src/sigs.k8s.io/work-api
 
-jobs:
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-go@v2
-      - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          # the version of golangci-lint.
-          version: v1.45.2
+env:
+  # Common versions
+  GO_VERSION: 1.17.x
+  GO_PATH: '/home/runner/work/work-api/work-api/go'
 
-          # show only new issues if it's a pull request.
-          only-new-issues: false
-          args: --timeout 3m0s
+jobs:
+  detect-noop:
+    runs-on: ubuntu-latest
+    outputs:
+      noop: ${{ steps.noop.outputs.should_skip }}
+    steps:
+      - name: Detect No-op Changes
+        id: noop
+        uses: fkirc/skip-duplicate-actions@v3.3.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          paths_ignore: '["**.md", "**.mdx", "**.png", "**.jpg"]'
+          do_not_skip: '["workflow_dispatch", "schedule", "push"]'
+          concurrent_skipping: false
+
   verify:
     name: verify
     runs-on: ubuntu-latest
@@ -33,32 +39,52 @@ jobs:
         with:
           fetch-depth: 1
           path: go/src/sigs.k8s.io/work-api
+
       - name: install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: ${{ env.GO_VERSION }}
+
       - name: verify
         run: hack/verify-all.sh -v
         env:
-          GOPATH: '/home/runner/work/work-api/work-api/go'
+          GOPATH: ${{ env.GO_PATH }}
+
   test:
     name: unit test
     needs: verify
     runs-on: ubuntu-latest
+    if: needs.detect-noop.outputs.noop != 'true'
     steps:
-      - name: checkout code
+      - name: Checkout source
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
           path: go/src/sigs.k8s.io/work-api
-      - name: install Go
+
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+
       - name: make test
         run: make test
         env:
-          GOPATH: '/home/runner/work/work-api/work-api/go'
+          GOPATH: ${{ env.GO_PATH }}
+
+      - name: Upload report
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          ## Repository upload token - get it from codecov.io. Required only for private repositories
+          token: ${{ secrets.CODECOV_TOKEN }}
+          ## Comma-separated list of files to upload
+          files: ./cover.out
+          flags: ci-tests
+          name: codecov-umbrella
+
   e2e:
     name: e2e
     runs-on: ubuntu-latest
@@ -71,7 +97,7 @@ jobs:
       - name: install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: ${{ env.GO_VERSION }}
       - name: images
         run: make docker-build
         env:
