--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,25 +30,25 @@ jobs:
           do_not_skip: '["workflow_dispatch", "schedule", "push"]'
           concurrent_skipping: false
 
-  verify:
-    name: verify
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-          path: go/src/sigs.k8s.io/work-api
-
-      - name: install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: verify
-        run: hack/verify-all.sh -v
-        env:
-          GOPATH: ${{ env.GO_PATH }}
+#  verify:
+#    name: verify
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: checkout code
+#        uses: actions/checkout@v2
+#        with:
+#          fetch-depth: 1
+#          path: go/src/sigs.k8s.io/work-api
+#
+#      - name: install Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{ env.GO_VERSION }}
+#
+#      - name: verify
+#        run: hack/verify-all.sh -v
+#        env:
+#          GOPATH: ${{ env.GO_PATH }}
 
   test:
     name: unit test
