--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: CI Workflow
 on:
   pull_request:
     branches:
-      - '**'
+      - master
+      - release-*
   workflow_dispatch: {}
 
 defaults:
