--- a/examples/example-work.yaml
+++ b/examples/example-work.yaml
@@ -16,7 +16,11 @@ spec:
         selector:
           matchLabels:
             app: test-nginx
-        strategy: {}
+        strategy:
+          rollingUpdate:
+            maxSurge: 50%
+            maxUnavailable: 50%
+          type: RollingUpdate
         template:
           metadata:
             creationTimestamp: null
