Removed All comments on the helm-charts and removed real values from the values.yaml. Also changed the ports to 8080 from 2112.

--- a/deploy-work-api/templates/secret.yaml
+++ b/deploy-work-api/templates/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: fleet-system
 type: Opaque
 data:
-  kubeconfig: 'put kubeconfig here'
+  kubeconfig: "insert hub-kubeconfig here"
