Fixes based on comments + changes from examples

--- a/deploy-work-api/templates/caravel-kubeconfig.yaml
+++ b/deploy-work-api/templates/caravel-kubeconfig.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: hub-kubeconfig-secret
-  namespace: fleet-system
+  namespace: {{ .Values.global.namespace }}
 type: Opaque
 data:
-  kubeconfig: "insert hub-kubeconfig here"
+  kubeconfig: {{ .Values.kubeconfig }}
