--- a/deploy-work-api/templates/caravel-service-account-role.yaml
+++ b/deploy-work-api/templates/caravel-service-account-role.yaml
@@ -18,7 +18,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "deploy-work-api.serviceAccountName" . }}
-    namespace: fleet-system
+    namespace: {{ .Values.global.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -31,4 +31,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "deploy-work-api.serviceAccountName" . }}
-    namespace: fleet-system
+    namespace: {{ .Values.global.namespace }}
