--- a/deploy-work-api/templates/caravel-install-controller.yaml
+++ b/deploy-work-api/templates/caravel-install-controller.yaml
@@ -35,7 +35,7 @@ spec:
             - name: hub-kubeconfig-secret
               mountPath: "hub-kubeconfig"
               readOnly: true
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "--work-namespace=default"
