Editing some helm files

--- a/deploy-work-api/templates/fleet-service-account.yaml
+++ b/deploy-work-api/templates/fleet-service-account.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "deploy-work-api.serviceAccountName" . }}
   labels:
     {{- include "deploy-work-api.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
