--- a/deploy/admin_clusterrole_binding.yaml
+++ b/deploy/admin_clusterrole_binding.yaml
@@ -14,7 +14,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: admin
+  name: cluster-admin
 subjects:
   - kind: ServiceAccount
     name: work-controller-sa
