--- a/deploy/admin_clusterrole_binding.yaml
+++ b/deploy/admin_clusterrole_binding.yaml
@@ -10,7 +10,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: work-controller
+  name: work-controller-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
