--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -82,4 +82,4 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: ${{ env.GOLANGCI_VERSION }}
-          timeout: 5
+          timeout: 5m
