Fix: Updated fleet-system resource namespace, default namespace for Work (#69)
* Updated Hub secret name reference, and default namespace for Work resources.
Co-authored-by: Sean Hobbs <sehobbs@microsoft.com>

--- a/examples/example-work-bad.yaml
+++ b/examples/example-work-bad.yaml
@@ -2,7 +2,7 @@ apiVersion: multicluster.x-k8s.io/v1alpha1
 kind: Work
 metadata:
   name: test-work
-  namespace: cluster-a
+  namespace: default
 spec:
   workload:
     manifests:
