--- a/examples/example-work-remove.yaml
+++ b/examples/example-work-remove.yaml
@@ -2,7 +2,7 @@ apiVersion: multicluster.x-k8s.io/v1alpha1
 kind: Work
 metadata:
   name: test-work
-  namespace: cluster-a
+  namespace: default
 spec:
   workload:
     manifests:
