--- a/deploy-work-api/templates/fleet-work-controller.yaml
+++ b/deploy-work-api/templates/fleet-work-controller.yaml
@@ -36,7 +36,7 @@ spec:
           image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - "--work-namespace=default"
+            - "--work-namespace={{ .Values.workNamespace }}"
             - "--hub-kubeconfig-secret=hub-kubeconfig-secret"
           ports:
             - name: http
