--- a/deploy-work-api/values.yaml
+++ b/deploy-work-api/values.yaml
@@ -46,5 +46,5 @@ service:
   type: ClusterIP
   port: 8080
 
-## @param kubeconfig base64 encoded hub-cluster kubeconfig
-kubeconfig: XXXXXXXXXXXXXXXXXXX==
+## @param work.namespace Namespace to fetch work from
+workNamespace: default
