--- a/config/crd/multicluster.x-k8s.io_appliedworks.yaml
+++ b/config/crd/multicluster.x-k8s.io_appliedworks.yaml
@@ -31,16 +31,33 @@ spec:
         status: {}
       "schema":
         "openAPIV3Schema":
-          description: AppliedWork represents an applied work on managed cluster that is placed on a managed cluster. An appliedwork links to a work on a hub recording resources deployed in the managed cluster. When the agent is removed from managed cluster, cluster-admin on managed cluster can delete appliedwork to remove resources deployed by the agent. The name of the appliedwork must be the same as {work name} The namespace of the appliedwork should be the same as the resource applied on the managed cluster.
+          description: |-
+            AppliedWork represents an applied work on managed cluster that is placed
+            on a managed cluster. An appliedwork links to a work on a hub recording resources
+            deployed in the managed cluster.
+            When the agent is removed from managed cluster, cluster-admin on managed cluster
+            can delete appliedwork to remove resources deployed by the agent.
+            The name of the appliedwork must be the same as {work name}
+            The namespace of the appliedwork should be the same as the resource applied on
+            the managed cluster.
           type: object
           required:
             - spec
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -62,10 +79,18 @@ spec:
               type: object
               properties:
                 appliedResources:
-                  description: AppliedResources represents a list of resources defined within the Work that are applied. Only resources with valid GroupVersionResource, namespace, and name are suitable. An item in this slice is deleted when there is no mapped manifest in Work.Spec or by finalizer. The resource relating to the item will also be removed from managed cluster. The deleted resource may still be present until the finalizers for that resource are finished. However, the resource will not be undeleted, so it can be removed from this list and eventual consistency is preserved.
+                  description: |-
+                    AppliedResources represents a list of resources defined within the Work that are applied.
+                    Only resources with valid GroupVersionResource, namespace, and name are suitable.
+                    An item in this slice is deleted when there is no mapped manifest in Work.Spec or by finalizer.
+                    The resource relating to the item will also be removed from managed cluster.
+                    The deleted resource may still be present until the finalizers for that resource are finished.
+                    However, the resource will not be undeleted, so it can be removed from this list and eventual consistency is preserved.
                   type: array
                   items:
-                    description: AppliedResourceMeta represents the group, version, resource, name and namespace of a resource. Since these resources have been created, they must have valid group, version, resource, namespace, and name.
+                    description: |-
+                      AppliedResourceMeta represents the group, version, resource, name and namespace of a resource.
+                      Since these resources have been created, they must have valid group, version, resource, namespace, and name.
                     type: object
                     required:
                       - ordinal
@@ -80,16 +105,23 @@ spec:
                         description: Name is the name of the resource
                         type: string
                       namespace:
-                        description: Namespace is the namespace of the resource, the resource is cluster scoped if the value is empty
+                        description: |-
+                          Namespace is the namespace of the resource, the resource is cluster scoped if the value
+                          is empty
                         type: string
                       ordinal:
-                        description: Ordinal represents an index in manifests list, so the condition can still be linked to a manifest even thougth manifest cannot be parsed successfully.
+                        description: |-
+                          Ordinal represents an index in manifests list, so the condition can still be linked
+                          to a manifest even thougth manifest cannot be parsed successfully.
                         type: integer
                       resource:
                         description: Resource is the resource type of the resource
                         type: string
                       uid:
-                        description: UID is set on successful deletion of the Kubernetes resource by controller. The resource might be still visible on the managed cluster after this field is set. It is not directly settable by a client.
+                        description: |-
+                          UID is set on successful deletion of the Kubernetes resource by controller. The
+                          resource might be still visible on the managed cluster after this field is set.
+                          It is not directly settable by a client.
                         type: string
                       version:
                         description: Version is the version of the resource.
