--- a/config/crd/multicluster.x-k8s.io_works.yaml
+++ b/config/crd/multicluster.x-k8s.io_works.yaml
@@ -83,24 +83,7 @@ spec:
                     state for a certain period.
                   type: array
                   items:
-                    description: |-
-                      Condition contains details for one aspect of the current state of this API Resource.
-                      ---
-                      This struct is intended for direct use as an array at the field path .status.conditions.  For example,
-
-
-                      	type FooStatus struct{
-                      	    // Represents the observations of a foo's current state.
-                      	    // Known .status.conditions.type are: "Available", "Progressing", and "Degraded"
-                      	    // +patchMergeKey=type
-                      	    // +patchStrategy=merge
-                      	    // +listType=map
-                      	    // +listMapKey=type
-                      	    Conditions []metav1.Condition `json:"conditions,omitempty" patchStrategy:"merge" patchMergeKey:"type" protobuf:"bytes,1,rep,name=conditions"`
-
-
-                      	    // other fields
-                      	}
+                    description: Condition contains details for one aspect of the current state of this API Resource.
                     type: object
                     required:
                       - lastTransitionTime
@@ -148,12 +131,7 @@ spec:
                           - "False"
                           - Unknown
                       type:
-                        description: |-
-                          type of condition in CamelCase or in foo.example.com/CamelCase.
-                          ---
-                          Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be
-                          useful (see .node.status.conditions), the ability to deconflict is important.
-                          The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
                         type: string
                         maxLength: 316
                         pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
@@ -169,29 +147,13 @@ spec:
                     type: object
                     required:
                       - conditions
+                      - identifier
                     properties:
                       conditions:
                         description: Conditions represents the conditions of this resource on spoke cluster
                         type: array
                         items:
-                          description: |-
-                            Condition contains details for one aspect of the current state of this API Resource.
-                            ---
-                            This struct is intended for direct use as an array at the field path .status.conditions.  For example,
-
-
-                            	type FooStatus struct{
-                            	    // Represents the observations of a foo's current state.
-                            	    // Known .status.conditions.type are: "Available", "Progressing", and "Degraded"
-                            	    // +patchMergeKey=type
-                            	    // +patchStrategy=merge
-                            	    // +listType=map
-                            	    // +listMapKey=type
-                            	    Conditions []metav1.Condition `json:"conditions,omitempty" patchStrategy:"merge" patchMergeKey:"type" protobuf:"bytes,1,rep,name=conditions"`
-
-
-                            	    // other fields
-                            	}
+                          description: Condition contains details for one aspect of the current state of this API Resource.
                           type: object
                           required:
                             - lastTransitionTime
@@ -239,12 +201,7 @@ spec:
                                 - "False"
                                 - Unknown
                             type:
-                              description: |-
-                                type of condition in CamelCase or in foo.example.com/CamelCase.
-                                ---
-                                Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be
-                                useful (see .node.status.conditions), the ability to deconflict is important.
-                                The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                              description: type of condition in CamelCase or in foo.example.com/CamelCase.
                               type: string
                               maxLength: 316
                               pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
